# BeetTweek-Firmware

./: .gitignore  .gitmodules  LICENSE  New Microsoft Excel Worksheet.xlsx  README.md  setup.py
API/: SerialCommands.h  SharedDefines.h
BeetTweek-Firmware/BootloaderH7/: .cproject  .cproject.templated  .gitignore  .mxproject  .project  .project.templated  BeetTweek_BootloaderH7.launch  BootloaderH7.ioc  (+3 more)
BeetTweek-Firmware/DSPBoardH7/: .cproject  .cproject.templated  .mxproject  .project  .project.templated  BeetTweek_DSPBoardH7.ioc  BeetTweek_DSPBoardH7.launch  CMakeLists.txt  DSPBoardH7 Debug.launch  DSPBoardH7.ioc  DSPBoardH7.txt  STM32H743ZITX_FLASH.ld
BeetTweek-Firmware/DSPBoardH7/Core/Inc/: BlockProcessing.h  BootLoaderJump.h  EEPromMap.h  InputOutputDescriptor.h  MotorControl.h  MotorController.h  ProbeTools.h  Program.h  SDPagedBuffer.h  SPIHandling.h  SharedDefines.h  TIMHandling.h  UART3Handling.h  adcdacbuffers.h  clockinput.h  dac.h  dma.h  guestures.h  i2c.h  main.h  mdma.h  overrides.h  profiling.h  sai.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
BeetTweek-Firmware/DSPBoardH7/Core/Inc/Modes/: Mode.h  Mode_Chords.h  Mode_Clocks.h  Mode_Indent1.h  Mode_Indent2.h  Mode_IndentRouting.h  Mode_Knob1.h  Mode_Orbits.h  Mode_Rachet.h  Mode_SequencedPluck.h  Mode_Sequencer.h  Mode_Spring1.h  Mode_TorqueCurve.h  Mode_Torque_Friction.h  Mode_TurnTable.h  Mode_Utility.h
BeetTweek-Firmware/DSPBoardH7/Core/Src/: BlockProcessing.cpp  BootLoaderJump.c  BootLoaderJump.cpp  InputOutputDescriptor.cpp  MotorControl.cpp  MotorController.cpp  ProbeTools.cpp  Program.cpp  RollingFloatBuffer.cpp  SPIHandling.cpp  TIMHandling.cpp  UART3Handling.cpp  adcdacbuffers.cpp  clockinput.cpp  dac.c  dma.c  gestures.cpp  gpio.c  i2c.c  main.c  mdma.c  overrides.cpp  profiling.cpp  rng.c  sai.c  sdmmc.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c  tim.c  usart.c
BeetTweek-Firmware/DSPBoardH7/Core/Src/Modes/: Mode.cpp  Mode_Chords.cpp  Mode_Clocks.cpp  Mode_Indent1.cpp  Mode_Indent2.cpp  Mode_IndentRouting.cpp  Mode_Knob1.cpp  Mode_Orbits.cpp  Mode_Rachet.cpp  Mode_SequencedPluck.cpp  Mode_Sequencer.cpp  Mode_Spring1.cpp  Mode_TorqueCurve.cpp  Mode_Torque_Friction.cpp  Mode_TurnTable.cpp  Mode_Utility.cpp
BeetTweek-Firmware/DSPBoardH7/Core/Startup/: startup_stm32h743zitx.s
BeetTweek-Firmware/DSPBoardH7/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
(+1946 files in other folders)
